templates/ingress-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.phink8s.com`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: wildcard-phink8s.com-tls
