templates/ingress-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prom.phink8s.com`)
      kind: Rule
      services:
        - name: monitoring-kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: wildcard-phink8s.com-tls
